# spaceship-titanic

./: eda-age-vip-roomservice-foodcourt.ipynb  pyproject.toml
hashiguchi/: 10-20.ipynb  disagreements_submission_catboost_vs_submission_lightgbm_vs_submission_catboost_many_features_vs_submission_10_19_vs_submission_80.csv  eda_analysis.ipynb  extract_disagreements.py  learning.ipynb  notebook310004088a.ipynb  submission_10_19.csv  submission_80.csv  submission_catboost.csv  submission_catboost_many_features.csv  submission_lightgbm.csv
notebooks/ryujiueda/: exp.ipynb
sawaguchi/: eda-age-vip-roomservice-foodcourt.ipynb  first_submit.ipynb  notebook310004088a.ipynb  notebook981cbe6f34.ipynb  sawaguchi.py
